# FAR

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  PROJECT_PROPOSAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: __init__.py  crag.py  multi_query_rag.py  reflective_rag.py
bench/: CARD.md  __init__.py  annotations.py  corpus.jsonl  falsirag_bench.jsonl  manifest.json  schema.py
bench/splits/: dev.jsonl  test_inputs.jsonl  train.jsonl
diagnostics/attribution_v1/: dev_component_attribution.json  failure_buckets.jsonl  hypotheses.json  manifest.json  mechanism_attribution.md  stratified_analysis.json
diagnostics/boundary_v1/: boundary_matrix.md  manifest.json  result.json
diagnostics/family_dev_v1/: family_dev_report.md  (+2 more)
docs/: AMENDMENT_SELECTIVE_ACCEPTANCE_PERFORMANCE_2026-07-14.md  ARCHITECTURE.md  ARTIFACT_STORAGE.md  AUTO_ANNOTATION.md  BLIND_TEST_HANDOFF.md  COMPLETION_AUDIT.md  CONTRIBUTING.md  CURRENT_OPERATIONAL_STATE.md  DEVELOPMENT_LOG.md  EVALUATION.md  EXPERIMENT_PLAN.md  EXTERNAL_ACTION_PACKET.md  HUMAN_ANNOTATION_PROTOCOL.md  MACHINE_ANNOTATION_FALLBACK.md  P14_EXECUTION.md  P5_EXECUTION.md  P6M_EXECUTION.md  P6_EXECUTION.md  PLAN_2PLUS4.md  PLAN_2PLUS4_EXECUTION.md  PLAN_2PLUS4_TRACEABILITY.md  PLAN_BOUNDARY_MAPPING.md  PLAN_FAMILY_DEV.md  PLAN_LONGTERM_OPTIMIZATION.md  PLAN_REDIRECTION.md  PREREG_ORACLE_ATTRIBUTION.md  PREREG_ORACLE_ATTRIBUTION_AMENDMENT_2026-07-10.md  PREREG_ORACLE_ATTRIBUTION_AMENDMENT_2026-07-10_P5_ABLATIONS.md  PREREG_ORACLE_ATTRIBUTION_AMENDMENT_2026-07-10_TRACE_AVAILABILITY.md  PREREG_ORACLE_ATTRIBUTION_AMENDMENT_2026-07-10_TRACE_MAP.md  PREREG_SELECTIVE_ACCEPTANCE_2026-07-14.md  PREREG_TYPE_MAPPABILITY_2026-07-10.md  PREREG_TYPE_MAPPABILITY_MACHINE_2026-07-13.md  PROPOSAL_TRACEABILITY.md  REDIRECTION_EXTERNAL_ACTIONS.md  REPRODUCING.md  RESEARCH_STATUS.md  REVISION_DELTA_METRIC_AUDIT.md  REVISION_TRACE_FIDELITY_AUDIT.md  SELECTIVE_REVISION_FEASIBILITY_AUDIT.md  (+1 more)
eval/: __init__.py  metrics.py  ramdocs.py  run_eval.py  stats.py
examples/: bm25_quickstart.py  offline_demo.py
experiments/: ablations.py  attribution.py  boundary.py  build_artifacts.py  diagnostic_release.py  evaluate_fever_binary.py  evidence_2plus4.py  evidence_attribution.py  evidence_boundary.py  evidence_family_dev.py  family_dev.py  generate_release_checksums.py  generate_sbom.py  jury_paper_readiness.py  jury_rescore.py  jury_sensitivity.py  longterm_status.py  model_matrix.py  model_smoke_2plus4.py  one_shot.py  phase_b_gate.py  power.py  project_status.py  protocol_2plus4.py  protocol_boundary.py  protocol_family_dev.py  protocol_longterm.py  ramdocs_error_analysis.py  ramdocs_round2.py  ramdocs_round2_error_analysis.py  ramdocs_round2_failure_readiness.py  ramdocs_suite.py  repository_maintenance.py  run_baselines.py  run_far.py  run_ramdocs.py  run_suite.py  runner.py  scan_secrets.py  score_blind_return.py  (+6 more)
far/: __init__.py  artifacts.py  claims.py  cli.py  counterfactual.py  evidence_types.py  models.py  oracle.py  paths.py  pipeline.py  protocols.py  revision.py
paper/: STATUS.md  abstract.txt  appendix.tex  main.tex  references.bib  supplement.tex
reports/: README.md  boundary_benchmark_selection.md  longterm_roadmap_status.json  longterm_roadmap_status.md  p5_ramdocs_ablations.json  p5_ramdocs_ablations.md  project_status_snapshot.json  project_status_snapshot.md  ramdocs_round2_failure_readiness.json  repository_maintenance.json  repository_maintenance.md  revision_trace_fidelity.json  revision_trace_fidelity.md  selective_acceptance.json  selective_acceptance.md  selective_revision_feasibility.json  selective_revision_feasibility.md  single_author_diagnostic_report.md  solo_human_review_priority.csv  solo_paper_readiness.json  solo_paper_readiness.md  stage_trace_map.json  stage_trace_map.md  tmlr_result_integration_matrix.md
scripts/: build_tmlr_paper.sh  check_cloud_run_readiness.sh  check_markdown_links.py  check_release_packages.sh  check_windows_p5_ablations.sh  check_windows_p6_prelabels.sh  check_windows_qwen_suite.sh  check_windows_ramdocs_round2.sh  check_windows_selective_acceptance.sh  fetch_windows_p5_ablations.sh  fetch_windows_p6_prelabels.sh  fetch_windows_p6m.sh  keep-wsl-training-online.ps1  package_smoke.py  pause_windows_selective_acceptance.sh  preflight_windows_boundary.sh  preflight_windows_family_dev_next.sh  preflight_windows_p5_ablations.sh  preflight_windows_p6_prelabels.sh  preflight_windows_selective_acceptance.sh  prepare_windows_longterm_worktree.sh  prepare_windows_p5_ablations.sh  prepare_windows_p6_prelabels.sh  prepare_windows_selective_acceptance.sh  queue_qwen_counterrefine.sh  queue_qwen_dev_suite.sh  queue_qwen_legacy_finalize.sh  release_check.sh  run_2plus4_model_family.sh  run_windows_p6m_juror.sh  smoke_2plus4_models.sh  solo_diagnostic_check.sh  solo_paper_release_check.sh  start_windows_boundary.sh  start_windows_cloud_suite.sh  start_windows_family_dev_next.sh  start_windows_p5_ablations.sh  start_windows_p6_prelabels.sh  start_windows_qwen_suite.sh  start_windows_ramdocs_round2.sh  (+10 more)
submission/: blind_test_attestation.template.json  evidence.template.json
tests/: test_2plus4_gates.py  test_ablations.py  test_artifacts.py  test_attribution.py  test_baselines_and_eval.py  test_benchmark.py  test_bm25_retriever.py  test_boundary.py  test_boundary_import.py  test_ci_workflow.py  test_claims.py  test_cli.py  test_counterfactual.py  test_diagnostic_release.py  test_diagnostic_report.py  test_experiment_runner.py  test_family_dev.py  test_fever_binary_evaluation.py  test_jury.py  test_jury_paper_readiness.py  test_llm_components.py  test_machine_consensus.py  test_markdown_links.py  test_oracle.py  test_p5_ablations.py  test_p5_remote_execution.py  test_p6_remote_execution.py  test_pipeline.py  test_power.py  test_project_status.py  test_ramdocs.py  test_release_checksums.py  test_repository_maintenance.py  test_review_priority.py  test_revision.py  test_revision_trace_audit.py  test_sbom.py  test_secret_scan.py  test_selective_acceptance.py  test_selective_revision_audit.py  (+7 more)
(+372 files in other folders)
