[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falsification-augmented-retrieval"
version = "0.1.0"
description = "Typed falsification-guided retrieval for self-correcting language agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "FAR contributors"}]
keywords = ["rag", "falsification", "retrieval", "verification", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "PyYAML>=6.0",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
eval = ["matplotlib>=3.7"]
models = [
  "faiss-cpu>=1.7",
  "huggingface-hub>=0.20",
  "sentence-transformers>=3.0,<6",
]
experiment = [
  "anthropic>=0.5",
  "faiss-cpu>=1.7",
  "huggingface-hub>=0.20",
  "ollama>=0.1",
  "openai>=1.0",
  "sentence-transformers>=3.0,<6",
]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
falsirag-run = "far.cli:run_far_main"
falsirag-baselines = "far.cli:run_baselines_main"
falsirag-eval = "far.cli:run_eval_main"
falsirag-validate-bench = "far.cli:validate_bench_main"
falsirag-annotate-packet = "far.cli:annotate_packet_main"
falsirag-auto-annotate = "far.cli:auto_annotate_main"
falsirag-weak-label = "far.cli:weak_label_main"
falsirag-machine-label-audit = "far.cli:machine_label_audit_main"
falsirag-machine-consensus = "far.cli:machine_consensus_main"
falsirag-suite = "far.cli:run_suite_main"
falsirag-build-artifacts = "far.cli:build_artifacts_main"
falsirag-build-blind-bundle = "far.cli:build_blind_bundle_main"
falsirag-generate-sbom = "far.cli:generate_sbom_main"
falsirag-release-checksums = "far.cli:generate_release_checksums_main"
falsirag-scan-secrets = "far.cli:scan_secrets_main"
falsirag-submission-readiness = "far.cli:submission_readiness_main"
falsirag-solo-readiness = "far.cli:solo_readiness_main"
falsirag-solo-release = "far.cli:solo_release_main"
falsirag-eval-fever-binary = "far.cli:evaluate_fever_binary_main"
falsirag-score-blind-return = "far.cli:score_blind_return_main"
falsirag-review-priority = "far.cli:review_priority_main"
falsirag-project-status = "far.cli:project_status_main"
falsirag-solo-paper-readiness = "far.cli:solo_paper_readiness_main"
falsirag-build-ramdocs = "far.cli:build_ramdocs_main"
falsirag-eval-ramdocs = "far.cli:evaluate_ramdocs_main"
falsirag-ramdocs = "far.cli:run_ramdocs_main"
falsirag-jury-annotate = "far.cli:jury_annotate_main"
falsirag-jury-consensus = "far.cli:jury_consensus_main"
falsirag-jury-adjudication = "far.cli:jury_adjudication_main"
falsirag-ramdocs-suite = "far.cli:ramdocs_suite_main"
falsirag-model-matrix = "far.cli:model_matrix_main"
falsirag-verify-2plus4-smoke = "far.cli:verify_2plus4_model_smoke_main"
falsirag-round2-failure-readiness = "far.cli:ramdocs_round2_failure_readiness_main"
falsirag-jury-rescore = "far.cli:jury_rescore_main"
falsirag-one-shot = "far.cli:one_shot_main"
falsirag-jury-paper-readiness = "far.cli:jury_paper_readiness_main"
falsirag-2plus4-release = "far.cli:evidence_2plus4_main"
falsirag-jury-sensitivity = "far.cli:jury_sensitivity_main"
far-run = "far.cli:run_far_main"
far-eval = "far.cli:run_eval_main"
far-validate-bench = "far.cli:validate_bench_main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["far*", "bench*", "baselines*", "eval*", "experiments*"]

[tool.setuptools.package-data]
bench = [
  "*.json",
  "*.jsonl",
  "*.md",
  "splits/*.jsonl",
]
experiments = ["configs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
allowed-confusables = ["％", "，", "；", "！", "？"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["paper/"]

[[tool.mypy.overrides]]
module = ["pytest"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "huggingface_hub",
  "huggingface_hub.*",
  "numpy",
  "numpy.*",
  "sentence_transformers",
  "sentence_transformers.*",
  "src",
  "src.*",
]
follow_imports = "skip"
